syntax = "proto3";

package client;

option go_package = "./proto;client";

service ClientService {
    rpc GetClients (EmptyRequest) returns (stream Client);
    rpc GetClaims (EmptyRequest) returns (ClaimResponse);
    rpc GetAdminsFromClient(EmptyRequest) returns (stream AdminResponse);
    rpc GetClerksFromClient(EmptyRequest) returns (stream ClerkResponse);
}

message EmptyRequest {}

message Client {
    int32 ID = 1;
    string Name = 2;
}

message ClaimResponse {
    string message = 1;
    repeated string roles = 2;
    repeated string storeIDs = 3;
}

message AdminResponse {
    int32 ID = 1;
    string Name = 2;
}

message ClerkResponse {
    int32 ID = 1;
    string Name = 2;
}